# python-coverage

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  python-coverage.py  python-coverage.sublime-commands  python-coverage.sublime-settings
example/: example.py
libs/: coverage-7.2.3-cp38-cp38-macosx_10_9_x86_64.whl  coverage-7.2.3-cp38-cp38-macosx_11_0_arm64.whl  coverage-7.2.3-cp38-cp38-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  coverage-7.2.3-cp38-cp38-manylinux_2_5_i686.manylinux1_i686.manylinux_2_17_i686.manylinux2014_i686.whl  coverage-7.2.3-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  coverage-7.2.3-cp38-cp38-musllinux_1_1_aarch64.whl  coverage-7.2.3-cp38-cp38-musllinux_1_1_i686.whl  coverage-7.2.3-cp38-cp38-musllinux_1_1_x86_64.whl  coverage-7.2.3-cp38-cp38-win32.whl  coverage-7.2.3-cp38-cp38-win_amd64.whl  watchdog-3.0.0-cp38-cp38-macosx_10_9_x86_64.whl  watchdog-3.0.0-cp38-cp38-macosx_11_0_arm64.whl  watchdog-3.0.0-py3-none-manylinux2014_aarch64.whl  watchdog-3.0.0-py3-none-manylinux2014_i686.whl
